--- a/.babelrc
+++ b/.babelrc
@@ -1,11 +1,12 @@
 {
     "presets": [
-      "@babel/env","@babel/react"
+      "@babel/env",
+      "@babel/react"
     ],
     "plugins": [
       "transform-class-properties",
       "@babel/plugin-syntax-object-rest-spread",
       "@babel/plugin-transform-runtime",
-      "@babel/plugin-syntax-dynamic-import"
+      "dynamic-import-node"
     ]
   }
