--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "1.0.0",
   "description": "",
   "scripts": {
-    "test": "eslint src && jest --coverage",
+    "test": "jest --coverage",
     "start": "webpack-dev-server --config webpack.dev.js",
     "build_dll": "webpack --config webpack.dll.js",
     "build": "webpack --config webpack.prod.js",
@@ -17,11 +17,17 @@
     "@babel/plugin-transform-runtime": "^7.2.0",
     "@babel/preset-env": "^7.2.0",
     "@babel/preset-react": "^7.0.0",
+    "babel-core": "^7.0.0-bridge.0",
+    "babel-jest": "^23.6.0",
     "babel-loader": "^8.0.4",
+    "babel-plugin-dynamic-import-node": "^2.2.0",
     "babel-plugin-transform-class-properties": "^6.24.1",
+    "enzyme": "^3.8.0",
+    "enzyme-adapter-react-16": "^1.7.1",
     "html-webpack-plugin": "^3.2.0",
     "jest": "^23.6.0",
     "redux-devtools-extension": "^2.13.7",
+    "regenerator-runtime": "^0.13.1",
     "sinon": "^7.1.1",
     "webpack": "^4.26.1",
     "webpack-cli": "^3.1.2",
