--- a/.babelrc
+++ b/.babelrc
@@ -1,7 +1,8 @@
 {
     "presets": [
       "@babel/env",
-      "@babel/react"
+      "@babel/react",
+      "@babel/flow"
     ],
     "plugins": [
       "transform-class-properties",
