--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "start": "webpack-dev-server --config webpack.dev.js",
     "build_dll": "webpack --config webpack.dll.js",
     "build": "webpack --config webpack.prod.js",
-    "lint": "eslint src"
+    "lint": "eslint src",
+    "flow": "flow"
   },
   "keywords": [],
   "author": "",
@@ -16,6 +17,7 @@
     "@babel/core": "^7.2.0",
     "@babel/plugin-transform-runtime": "^7.2.0",
     "@babel/preset-env": "^7.2.0",
+    "@babel/preset-flow": "^7.0.0",
     "@babel/preset-react": "^7.0.0",
     "babel-core": "^7.0.0-bridge.0",
     "babel-jest": "^23.6.0",
@@ -24,6 +26,7 @@
     "babel-plugin-transform-class-properties": "^6.24.1",
     "enzyme": "^3.8.0",
     "enzyme-adapter-react-16": "^1.7.1",
+    "flow-bin": "^0.88.0",
     "html-webpack-plugin": "^3.2.0",
     "jest": "^23.6.0",
     "redux-devtools-extension": "^2.13.7",
